# fieldglass

./: .gitignore  .pre-commit-config.yaml  BLURT_plan.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  RELEASE-TEST-PLAN.md  RELEASING.md  ROADMAP.md  SECURITY.md  codecov.yml  deny.toml  package-lock.json  package.json  test_exact_bug  test_flipped  test_meridian
crates/fieldglass-core/: Cargo.toml  README.md
crates/fieldglass-core/src/: bits.rs  colormap.rs  colormap_tables.rs  combine.rs  contour.rs  csv.rs  detect.rs  error.rs  lib.rs  matrix.rs  metadata.rs  overlay.rs  projection.rs  reader.rs  sht.rs  warp.rs
crates/fieldglass-grib1/: Cargo.toml  README.md
crates/fieldglass-grib1/fuzz/: .gitignore  Cargo.toml  README.md
crates/fieldglass-grib1/fuzz/fuzz_targets/: decode.rs
crates/fieldglass-grib1/src/: bds.rs  bms.rs  gds.rs  is.rs  lib.rs  pds.rs  predefined.rs  reader.rs  tables.rs  tables_ecmwf.rs
crates/fieldglass-grib1/src/packing/: complex.rs  ieee.rs  matrix.rs  mod.rs  second_order.rs  second_order_classic.rs  simple.rs  spherical.rs
crates/fieldglass-grib1/tests/: decode_ecmwf_complex.rs  decode_ieee.rs  decode_matrix.rs  decode_real_grib1.rs  decode_reduced_gaussian.rs  decode_second_order_classic.rs  hostile_inputs.rs  malformed_inputs.rs  packing_label.rs  predefined_grid.rs  scanner.rs  spectral.rs  spectral_render.rs
crates/fieldglass-grib1/tests/fixtures/: NOTICE.md  ecmwf_lfpw_msg0.grib1  ecmwf_lfpw_msg0_expected.json  ecmwf_spd3_boust_msg0_expected.json  ecmwf_spd3_msg0.grib1  ecmwf_spd3_msg0_expected.json  hand_second_order_SPD1.grib1  hand_second_order_SPD1_expected.json  hand_second_order_constant_width_expected.json  hand_second_order_general_grib1.grib1  hand_second_order_general_grib1_expected.json  hand_second_order_no_SPD_expected.json  hand_second_order_row_by_row.grib1  hand_second_order_row_by_row_expected.json  ieee32_cmc_wind.grib1  ieee32_cmc_wind_expected.json  ieee64_cmc_wind.grib1  ieee64_cmc_wind_expected.json  matrix_simple_cmc_wind_expected.json  reduced_gg_n32.grib1  spectral_complex_t63.eccodes.ref.txt  spectral_render_t63.oracle.txt  spectral_simple_t63.eccodes.ref.txt  spectral_simple_t63.grib1
crates/fieldglass-grib2/: Cargo.toml  README.md
crates/fieldglass-grib2/fuzz/: Cargo.toml  README.md
crates/fieldglass-grib2/fuzz/fuzz_targets/: decode.rs
crates/fieldglass-grib2/src/: bms.rs  drs.rs  ds.rs  gds.rs  ids.rs  is.rs  lib.rs  lus.rs  matrix.rs  pds.rs  reader.rs  section.rs  spectral.rs  tables.rs
crates/fieldglass-grib2/tests/: decode.rs  decode_bifourier.rs  decode_ccsds.rs  decode_complex.rs  decode_complex_constant.rs  decode_complex_missing.rs  decode_complex_spd.rs  decode_ieee.rs  decode_jpeg2000.rs  decode_local_templates.rs  decode_log_preprocessing.rs  decode_matrix.rs  decode_matrix_reshape.rs  decode_png.rs  decode_runlength.rs  decode_second_order.rs  detection.rs  eccodes_reference.rs  grid_definition.rs  identification.rs  indicator.rs  malformed_inputs.rs  product_definition.rs  spectral.rs  spectral_render.rs
crates/fieldglass-grib2/tests/fixtures/: NOTICE.md  bifourier_diamond_no_axes.eccodes.ref.txt  bifourier_diamond_no_axes.grib2  bifourier_ellipse_ieee32.eccodes.ref.txt  bifourier_ellipse_ieee32.grib2  bifourier_ellipse_keepaxes.eccodes.ref.txt  bifourier_ellipse_keepaxes.grib2  bifourier_rectangle_keepaxes.eccodes.ref.txt  bifourier_rectangle_keepaxes.grib2  ccsds_regular_latlon.grib2  ccsds_regular_latlon_24bit.grib2  ccsds_regular_latlon_24bit_expected.json  ccsds_regular_latlon_8bit.grib2  ccsds_regular_latlon_8bit_expected.json  ccsds_regular_latlon_expected.json  complex_mvm1_regular_latlon.grib2  complex_mvm1_regular_latlon_expected.json  complex_mvm2_regular_latlon.grib2  complex_mvm2_regular_latlon_expected.json  complex_ng0_regular_latlon.grib2  complex_ng0_regular_latlon_expected.json  complex_regular_latlon.grib2  complex_regular_latlon_expected.json  complex_rowbyrow_regular_latlon.grib2  complex_rowbyrow_regular_latlon.grib2.eccodes.ref.json  complex_rowbyrow_regular_latlon_expected.json  complex_spd2_mvm1_regular_latlon.grib2  complex_spd2_mvm1_regular_latlon_expected.json  complex_spd2_ng0_regular_latlon.grib2  complex_spd2_ng0_regular_latlon_expected.json  complex_spd2_regular_latlon.grib2  complex_spd2_regular_latlon_expected.json  ecmwf_ccsds_latlon.grib2  ecmwf_ccsds_latlon.grib2.eccodes.ref.json  ecmwf_ccsds_latlon_expected.json  eta_lambert_msg0.grib2  eta_lambert_msg0.grib2.eccodes.ref.json  gfs_c255_latlon.grib2.eccodes.ref.json  gfs_c255_latlon_expected.json  hrrr_complex_spd_lambert.grib2  (+39 more)
crates/fieldglass-napi/: Cargo.toml  package.json
crates/fieldglass-napi/src/: lib.rs
crates/fieldglass-netcdf/: Cargo.toml  README.md
crates/fieldglass-netcdf/fuzz/: .gitignore  Cargo.toml  README.md
crates/fieldglass-netcdf/fuzz/fuzz_targets/: parse.rs
crates/fieldglass-netcdf/src/: classic.rs  geometry.rs  hdf5.rs  lib.rs  projection.rs  reader.rs
crates/fieldglass-netcdf/src/hdf5/: attribute.rs  dataset.rs  dataspace.rs  datatype.rs  dimensions.rs  filter.rs  global_heap.rs  group.rs  heap.rs  layout.rs  object_header.rs  values.rs
crates/fieldglass-netcdf/tests/: cf_packed_data.rs  classic_value_decode.rs  classic_value_targets.rs  detection.rs  ersst_real_world.rs  goes_real_world.rs  hdf5_attributes.rs  hdf5_dataset_meta.rs  hdf5_deep_parse_targets.rs  hdf5_dimension_scales.rs  hdf5_group_traversal.rs  hdf5_nested_groups.rs  hdf5_object_header.rs  hdf5_value_decode.rs  header_parsing.rs  missing_value.rs  oisst_real_world.rs  projected_grids.rs  slice_geometry.rs
crates/fieldglass-netcdf/tests/fixtures/: NOTICE.md  build_fixtures.py  cf_packed_data.nc  cf_packed_data.nc.oracle.json  ersst_v5_187001_cdf1.nc.values.json  goes16_abi_cmip.nc  goes16_abi_cmip.nc.oracle.json  goes_geostationary.nc  goes_geostationary.nc.oracle.json  hdf5_btreev2_multilevel.h5  hdf5_btreev2_multilevel.h5.oracle.json  hdf5_child_indirect.h5  hdf5_child_indirect.h5.oracle.json  hdf5_ea_chunk_index.h5  (+31 more)
(+87 files in other folders)
