[workspace]
members = [
    "crates/fieldglass-core",
    "crates/fieldglass-grib1",
    "crates/fieldglass-grib2",
    "crates/fieldglass-netcdf",
    "crates/fieldglass-napi",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2024"
license    = "MIT OR Apache-2.0"
authors    = ["Cole Hinkel <15200182+D0ubleD0uble@users.noreply.github.com>", "Fieldglass contributors"]
repository = "https://github.com/D0ubleD0uble/fieldglass"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
