[workspace]
members = [
    "crates/fieldglass-core",
    "crates/fieldglass-grib1",
    "crates/fieldglass-grib2",
    "crates/fieldglass-netcdf",
    "crates/fieldglass-napi",
]
resolver = "2"

[workspace.package]
version    = "0.1.3"
edition    = "2024"
license    = "MIT OR Apache-2.0"
authors    = ["Cole Hinkel <15200182+D0ubleD0uble@users.noreply.github.com>", "Fieldglass contributors"]
repository = "https://github.com/D0ubleD0uble/fieldglass"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Pure-Rust PNG codec for GRIB2 DRS template 5.41 decode (no C deps; MIT/Apache,
# cross-compiles to every release target). See crates/fieldglass-grib2.
png = "0.18"
# Pure-Rust CCSDS/AEC (libaec-compatible) codec for GRIB2 DRS template 5.42
# decode. Purpose-built for GRIB2 5.42 and validated byte-for-byte against the
# eccodes oracle; no C deps, so it preserves the six-target cross-compile.
# Pinned exactly (bus-factor 1 upstream): review the diff on every bump and rely
# on `cargo deny check` for advisory / licence drift. See ADR-0001.
rust-aec = "=0.1.1"
# Pure-Rust JPEG 2000 codec for GRIB2 DRS template 5.40 (grid_jpeg) decode.
# Purpose-built GRIB2-decode-first and validated against the eccodes oracle; no C
# deps, so it preserves the six-target cross-compile that ADR-0001 protects.
# Pinned exactly (young, bus-factor 1 upstream): review the diff on every bump
# and rely on `cargo deny check` for advisory / licence drift. See ADR-0001.
rust-j2k = "=0.2.0"
# Pure-Rust DEFLATE (zlib) codec for the HDF5 deflate filter used by NetCDF-4
# chunked datasets. Already in the tree via the `png` crate; MIT-licensed, no C
# deps. See crates/fieldglass-netcdf.
miniz_oxide = "0.8"
