[package]
name        = "fieldglass-core"
description = "Format-agnostic traits and shared types for the Fieldglass data viewer"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
