[package]
name        = "fieldglass-core"
description = "Format-agnostic traits and shared types for the Fieldglass data viewer"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
# Viewer-domain code (`warp`, `overlay`, `colormap`) consumed only by
# `fieldglass-napi`. On by default so the workspace and downstream renderers get
# it transitively; the format crates opt out with `default-features = false` to
# keep their public API to the parsing surface. See the crate-level docs.
default = ["render"]
render = []

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
