[package]
name        = "fieldglass-core"
description = "Format-agnostic traits and shared types for the Fieldglass data viewer"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "README.md"
keywords    = ["grib", "netcdf", "meteorology", "weather", "geospatial"]
categories  = ["science", "parser-implementations"]

[features]
# Viewer-domain code (`warp`, `overlay`, `colormap`) consumed only by
# `fieldglass-napi`. On by default so the workspace and downstream renderers get
# it transitively; the format crates opt out with `default-features = false` to
# keep their public API to the parsing surface. See the crate-level docs.
default = ["render"]
render = []

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
