[package]
name        = "fieldglass-grib1"
description = "GRIB edition 1 format reader implementing the Fieldglass core traits"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fieldglass-core = { path = "../fieldglass-core", version = "0.1" }
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
