[package]
name        = "fieldglass-grib2"
description = "GRIB edition 2 format reader — full §0–§7 parsing and simple-packing (DRS 5.0) value decode"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fieldglass-core = { path = "../fieldglass-core", version = "=0.1.1" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }
