[package]
name        = "fieldglass-grib2"
description = "GRIB edition 2 format reader — full §0–§7 parsing and simple-packing (DRS 5.0) value decode"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fieldglass-core = { path = "../fieldglass-core", version = "=0.1.3" }
serde = { version = "1", features = ["derive"] }
png = { workspace = true }
rust-aec = { workspace = true }
rust-j2k = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
