[package]
name        = "fieldglass-napi"
description = "Node.js bindings for Fieldglass via napi-rs"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
fieldglass-core   = { path = "../fieldglass-core",   version = "0.1" }
fieldglass-grib1  = { path = "../fieldglass-grib1",  version = "0.1" }
fieldglass-grib2  = { path = "../fieldglass-grib2",  version = "0.1" }
fieldglass-netcdf = { path = "../fieldglass-netcdf", version = "0.1" }
napi = { version = "2", features = ["napi6"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
