[package]
name        = "fieldglass-napi"
description = "Node.js bindings for Fieldglass via napi-rs"
# cdylib-only binding crate; there is nothing to consume on crates.io. Guard so a
# future bulk `cargo publish` of the workspace can't include it by accident.
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
crate-type = ["cdylib"]

[dependencies]
fieldglass-core   = { path = "../fieldglass-core",   version = "=0.2.0", features = ["render"] }
fieldglass-grib1  = { path = "../fieldglass-grib1",  version = "=0.2.0" }
fieldglass-grib2  = { path = "../fieldglass-grib2",  version = "=0.2.0" }
fieldglass-netcdf = { path = "../fieldglass-netcdf", version = "=0.2.0" }
napi = { version = "3", features = ["napi6"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
