[package]
name        = "fieldglass-netcdf"
description = "NetCDF format reader — classic (CDF-1/2/5) header parser; HDF5 / NetCDF-4 superblock probe"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fieldglass-core = { path = "../fieldglass-core", version = "=0.1.3" }
serde = { version = "1", features = ["derive"] }
# DEFLATE (zlib) decode for the HDF5 deflate filter on chunked NetCDF-4 datasets.
miniz_oxide = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
