[package]
name        = "fieldglass-netcdf"
description = "NetCDF format reader — classic (CDF-1/2/5) and NetCDF-4 / HDF5: metadata, dimension scales, and value decode"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fieldglass-core = { path = "../fieldglass-core", version = "=0.2.0", default-features = false }
serde = { version = "1", features = ["derive"] }
# DEFLATE (zlib) decode for the HDF5 deflate filter on chunked NetCDF-4 datasets.
miniz_oxide = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
