[package]
name        = "fieldglass-netcdf"
description = "NetCDF format reader — classic (CDF-1/2/5) and NetCDF-4 / HDF5: metadata, dimension scales, and value decode"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "README.md"
keywords    = ["netcdf", "hdf5", "meteorology", "weather", "science"]
categories  = ["science", "parser-implementations"]

[dependencies]
fieldglass-core = { path = "../fieldglass-core", version = "=0.3.0", default-features = false }
serde = { workspace = true }
# DEFLATE (zlib) decode for the HDF5 deflate filter on chunked NetCDF-4 datasets.
miniz_oxide = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
