[package]
name = "fieldglass-netcdf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fieldglass-netcdf = { path = ".." }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

# Keep this crate out of the parent workspace so the standard gates
# (`cargo build/clippy/test --workspace`) — which run on stable — never
# try to compile the nightly-only libFuzzer target.
[workspace]
